Xatolar togirlandi Html va css

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main>
         <div class="korzina1">
             <p>
-                < к выбору блюда </p>
+                <p> к выбору блюда </p>
         </div>
 
         <div class="korzina2">
